--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -197,16 +197,16 @@ export { getStaticPaths };
 
   <section id="contact" class="section contact-cta">
     <div class="content">
-      <h4 class="text-large text-uppercase">Escríbeme</h4>
+      <h4 class="text-title text-uppercase">Escríbeme</h4>
 
-      <p class="text-title">
+      <p class="text-large">
         Para crear contenido visual
         <br />
         que hará que tu marca destaque
       </p>
 
       <a href={routes.contact({ locale })} class="btn">
-        Ir a contacto →
+        Contacta conmigo →
       </a>
     </div>
   </section>
