Comment the blog for now

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ const year = new Date().getFullYear();
         <li><a href={routes.root({ locale })}>Inicio</a></li>
         <li><a href={routes.about({ locale })}>Acerca de</a></li>
         <li><a href={routes.portfolio.root({ locale })}>Portafolio</a></li>
-        <li><a href={routes.blog.root({ locale })}>Blog</a></li>
+        <!-- li><a href={routes.blog.root({ locale })}>Blog</a></li-->
       </ul>
     </div>
 
