--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -31,9 +31,9 @@ const activeClass = (item: string): string => {
     <li class={`nav-item ${activeClass('portfolio')}`}>
       <a href={routes.portfolio.root({ locale })}>Portafolio</a>
     </li>
-    <li class={`nav-item ${activeClass('blog')}`}>
+    <!-- li class={`nav-item ${activeClass('blog')}`}>
       <a href={routes.blog.root({ locale })}>Blog</a>
-    </li>
+    </li -->
     <li class={`nav-item ${activeClass('faq')}`}>
       <a href={routes.faq({ locale })}>FAQ</a>
     </li>
