--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -10,7 +10,7 @@ import CloseRoundedIcon from '@mui/icons-material/CloseRounded';
     </header>
 
     <main class="modal-body" id="modal-description">
-      <div id="video-player"></div>
+      <div id="video-player-modal"></div>
     </main>
   </div>
 </div>
