--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,8 +62,6 @@ export interface Props {
 
 		<Footer />
 
-		<script>
-			import "/src/scripts/main.js";
-		</script>
+		<script src="/src/scripts/main.js"></script>
 	</body>
 </html>
