--- a/src/pages/[...locale]/index.astro
+++ b/src/pages/[...locale]/index.astro
@@ -34,6 +34,9 @@ const showReelUrl = 'https://www.youtube.com/watch?v=edXnSyD0NsA'
 
 export { getStaticPaths };
 ---
+<script src="/src/scripts/projects.js"></script>
+<script src="/src/scripts/video.js"></script>
+
 <Layout title={title} description={description}>
   <section class="hero" slot="hero">
     <div>
