--- a/src/pages/[...locale]/portfolio/index.astro
+++ b/src/pages/[...locale]/portfolio/index.astro
@@ -26,6 +26,8 @@ const millyCohenTales = projectMillyCohenTales({ locale });
 
 export { getStaticPaths };
 ---
+<script src="/src/scripts/projects.js"></script>
+
 <Layout title= {title} description={description} active="portfolio">
   <section class="hero" slot="hero">
     <div>
