--- a/src/pages/[...locale]/portfolio/multimedia/index.astro
+++ b/src/pages/[...locale]/portfolio/multimedia/index.astro
@@ -25,6 +25,8 @@ const millyCohenTales = projectMillyCohenTales({ locale });
 
 export { getStaticPaths };
 ---
+<script src="/src/scripts/projects.js"></script>
+
 <Layout title= {title} description={description} active="portfolio">
   <section id="multimedia" class="section projects">
     <ol class="breadcrumb">
