--- a/src/components/icons/Behance.astro
+++ b/src/components/icons/Behance.astro
@@ -1,4 +1,4 @@
-<svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" class="icon">
+<svg focusable="false" viewBox="0 0 24 24" class="icon">
   <path d="M7.79,5.03c0.54,0,1.09,0.05,1.6,0.16c0.44,0.1,0.85,0.28,1.24,0.54c0.34,0.26,0.62,0.6,0.8,0.98
   c0.21,0.49,0.31,1.01,0.28,1.53c0.03,0.57-0.13,1.14-0.41,1.63c-0.31,0.47-0.75,0.83-1.24,1.06c0.7,0.18,1.29,0.62,1.68,1.19
   c0.39,0.62,0.57,1.35,0.57,2.07c0,0.6-0.1,1.17-0.36,1.68c-0.23,0.47-0.57,0.85-0.96,1.19c-0.41,0.31-0.91,0.54-1.4,0.67
