--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,5 +63,6 @@ export interface Props {
 		<Footer />
 
 		<script src="/src/scripts/main.js"></script>
+		<script src="/src/scripts/newsletter.js"></script>
 	</body>
 </html>
