--- a/src/components/icons/Instagram.astro
+++ b/src/components/icons/Instagram.astro
@@ -1,4 +1,4 @@
-<svg focusable="false" viewBox="0 0 24 24" class="icon">
+<svg focusable="false" aria-hidden="true" viewBox="0 0 24 24" class="icon">
   <path d="M7.86,2.07C6.79,2.12,6.07,2.29,5.43,2.54C4.78,2.8,4.22,3.14,3.66,3.7c-0.55,0.56-0.9,1.11-1.15,1.77
     C2.27,6.1,2.1,6.83,2.05,7.9C2.01,8.96,2,9.3,2,12.02c0.01,2.72,0.02,3.06,0.07,4.12s0.22,1.79,0.47,2.43
     c0.26,0.66,0.6,1.21,1.16,1.77s1.11,0.9,1.77,1.15c0.64,0.25,1.36,0.41,2.43,0.46C8.96,21.99,9.3,22,12.02,22
