--- a/src/pages/[...locale]/about.astro
+++ b/src/pages/[...locale]/about.astro
@@ -21,13 +21,13 @@ export { getStaticPaths };
   <section class="section about">
     <div class="content">
       <div>
-        <h3 class="title text-large text-uppercase">
+        <h3 class="title text-large text-uppercase text-header-color">
           {t('about.header1')}
         </h3>
 
         <div set:html={t('about.content1')} />
 
-        <div class="about-sn">
+        <div class="about-social-networks">
           <a href="https://www.behance.net/GabrielaBorraz" target="_blank">
             <Behance />
           </a>
@@ -41,15 +41,17 @@ export { getStaticPaths };
       </div>
 
       <div>
-        <h3 class="title text-large text-uppercase">
+        <h3 class="title text-large text-uppercase text-header-color">
           {t('about.header2')}
         </h3>
 
         <div set:html={t('about.content2')} /> 
 
-        <a href={routes.contact({ locale })} class="btn full-width">
-          {t('about.btn')}
-        </a>
+        <div class="cta">
+          <a href={routes.contact({ locale })} class="btn full-width">
+            {t('about.btn')}
+          </a>
+        </div>
       </div>
     </div>
   </section>
