Display block only when full-width

--- a/public/global.css
+++ b/public/global.css
@@ -599,7 +599,9 @@ object {
 }
 
 a.btn {
-  display: block;
+  &.full-width {
+    display: block;
+  }
 }
 /* ---------------------------------------------------------------------------*/
 
